client/src/css/Footer.css
.contact-us {
    background-color: #F9B707;
    height: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.contact-us-message {
    color: #FFF;
    font-weight: bold;
    text-align: center;
    padding-bottom: 20px;
}

.contact-us-button {
    background-color: #FFF;
    padding: 10px 20px;
    border: none;
    border-radius: 30px;
    color: #787878;
    cursor: pointer;
}

.footer {
    background-color: #4B4B4B;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5% 15%;
    height: 100%;
    flex-flow: row wrap;
}

.footer-left {
    padding: 5%;
    flex: 60%;
    align-self: center;
}

.footer-left a {
    color: #787878;
}

.footer-left a svg {
    font-size: 1.5em;
    margin-right: 10px;
}

.footer-right {
    flex: 40%;
}

.footer-logo {
    margin-bottom: 10px;
    width: 50%;
}

.footer-text {
    text-align: justify;
    margin-bottom: 20px;
    white-space: break-word;
}

.footer-right a {
    color: #787878;
}

.footer {
    color: #787878;
}

.contact-form {
    display: flex;
    flex-direction: column;
}


.contact-form input{
    padding: 15px;
    border-radius: 20px;
    border-color: #C2C2C2;
    border-style: solid;
    border-width: 1px;
    margin-bottom: 10px;
}

.contact-form input:focus {
    outline: none;
    border-color: #787878;
}

.contact-form textarea {
    padding: 15px;
    border-radius: 20px;
    border-color: #C2C2C2;
    border-style: solid;
    border-width: 1px;
    margin-bottom: 10px;
}

.contact-form textarea:focus {
    outline: none;
    border-color: #787878;
}

.contact-form a {
    color: #F9B707;
}

.contact-form a:hover {
    color: #C69715;
}

.contact-us-header {
    margin-bottom: 10px;
    padding: 10px;
    padding-top: 0;
}

